opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/ppx_type_conv"
bug-reports: "https://github.com/janestreet/ppx_type_conv/issues"
dev-repo: "git+https://github.com/janestreet/ppx_type_conv.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "ppxlib"                {>= "v0.11.0"}
  "jbuilder"                {build & >= "1.0+beta12"}
  "ocaml-migrate-parsetree" {>= "1.0"}
  "ppx_derivers"            {>= "1.0"}
]
available: [ ocaml-version >= "4.04.1" ]
descr: "
Support Library for type-driven code generators

Part of the Jane Street's PPX rewriters collection.
"
